--- a/IndexGr.html
+++ b/IndexGr.html
@@ -3,56 +3,53 @@
 <head>
 	<title>Fight Coronavirus (COVID-19)</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="donation.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-		<ul class="navbar mr-auto">
+	<nav class="navbar navbar-expand-lg sticky-top">
+		<ul class="navbar mr-auto margin-bottom-0">
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0" id="covid">COVID-19</h4>
+			<button class="navbar-toggler navbar-dark alignCenter align-items-center" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarMenu">
-				<ul class="navbar-nav mr-auto">
+				<ul class="navbar-nav">
 					<div class="nav-item">
-						<a href="IndexGr.html" class="nav-link">Αρχική</a>
+						<a href="IndexGr.html" class="nav-link"><b>ΑΡΧΙΚΗ</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="eventsGr.html" class="nav-link">Εκδηλώσεις</a>
+						<a href="eventsGr.html" class="nav-link"><b>ΕΚΔΗΛΩΣΕΙΣ</b></a>
 					</div>
 					<div class="nav-item">
-					<a href="donation_pageGr.html" class="nav-link">Δωρεά</a>
+					<a href="donation_pageGr.html" class="nav-link"><b>ΔΩΡΕΕΣ</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="about_usGr.html" class="nav-link">Σχετικά με εμάς</a>
+						<a href="about_usGr.html" class="nav-link"><b>ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</b></a>
 					</div>
-						<a href="contact_usGr.html" class="nav-link">Επικοινωνία</a>
+						<a href="contact_usGr.html" class="nav-link"><b>ΕΠΙΚΟΙΝΩΝΙΑ</b></a>
 					</div>
 				</ul>
 			</div>
 		</ul>
-		<div id="buttonsLanguage" class="row">
-			<ul class="navbar mr-auto">
+		<div id="buttonsLanguage" class="row show-on-desktop">
+			<ul class="navbar mr-auto margin-bottom-0">
 				<div class="col-md-1">
-					<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
+					<a class="socialButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-1">
-					<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
+					<a class="socialButton" id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-1">
-					<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
+					<a class="socialButton" id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-3">
 					<select class="selectpicker" data-width="fit" onchange="location = this.value;">
@@ -65,35 +62,24 @@
 			</div>
 		</ul>
 	</nav>
-	<div class="row">
-		<div class="offset-3">
+	<div class="row" id="header">
+		<div class="offset-2">
 		</div>
-		<div class="col-md-6">
-			<div>
-				<br>
-				<h1 id="alignCenter">Τι είναι ο Κορονοϊός;</h1>
-			</div>	
-		</div>
-		<div class="offset-3">
-		</div>
-	</div>
-	<div class="row">
-		<div class="offset-3">
-		</div>
-		<div class="col-md-6">
+		<div class="col-md-8">
+			<h1 class="alignCenter">Τι είναι ο Κορονοϊός;</h1>
 			<p>Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 18 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 200.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 8.000 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων από 4.700 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 82.000 άνθρωποι.
 				Η μόλυνση μεταδίδεται κυρίως μέσω της μετάδοσης από άνθρωπο σε άνθρωπο μέσω σταγονιδίων αναπνοής που παράγονται όταν εκπνέουν οι άνθρωποι (όπως φτάρνισμα ή βήχας) σε απόσταση μικρότερη του ενός μέτρου. Ο χρόνος μεταξύ της έκθεσης και της εμφάνισης συμπτωμάτων είναι συνήθως από 2 έως 14 ημέρες.
 			</p>
 			<br>
 			<br>
 		</div>
-		<div class="offset-3">
-		</div>
-	</div>
-	<div class="row align-items-center">
 		<div class="offset-2">
 		</div>
-		<div class="col-md-5" id="alignCenter">
+	</div>
+	<div class="row align-items-center" id="carousel">
+		<div class="offset-2">
+		</div>
+		<div class="col-md-5 alignCenter">
 			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -127,7 +113,7 @@
 			</div>
 		</div>
 		<div class="col-md-4">
-			<div id="alignCenter" class="tips">
+			<div class="tips alignCenter">
 				<h3>Συμβουλές προστασίας</h3>
 				<h6>Πλένετε καλά τα χέρια σας.</h6>
 				<h6>Μην αγγίζετε το προσωπό σας συχνά.</h6>
@@ -138,13 +124,13 @@
 		<div class="offset-1">
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" id="mainIndex">
 		<div class="offset-3">
 		</div>
 		<div class="col-md-6">
 			<br>
 			<br>
-			<h3 id="alignCenter">Συμπτώματα</h3>
+			<h3 class="alignCenter">Συμπτώματα</h3>
 			<p>Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία και πανεπιστήμια έχουν κλείσει σε εθνικό ή τοπικό επίπεδο σε τουλάχιστον 115 χώρες, επηρεάζοντας πάνω από 950 εκατομμύρια μαθητές.
 				Η πανδημία έχει κηρυχθεί από τον Παγκόσμιο Οργανισμό Υγείας (Π.Ο.Υ.) Έκτακτη Ανάγκη Δημόσιας Υγείας Διεθνούς Ενδιαφέροντος (PHEIC), με βάση τις πιθανές επιπτώσεις που θα μπορούσε να έχει ο ιός εάν εξαπλωθεί σε χώρες με ασθενέστερα συστήματα υγειονομικής περίθαλψης. Αυτή η κήρυξη ήταν η έκτη φορά που έχει κληθεί το μέτρο μετά από την πανδημία του H1N1 το 2009.
 				Ξενοφοβία και ρατσισμός κατά των ανθρώπων κινεζικής και ανατολικής ασιατικής καταγωγής έχουν σημειωθεί λόγω της επιδημίας, τροφοδοτώντας τον φόβο και την εχθρότητα σε διάφορες χώρες. Παραπληροφόρηση που διαδόθηκε κυρίως στο διαδίκτυο σχετικά με τον κορωνοϊό, οδήγησε την ΠΟΥ να κηρύξει "πληροφοριοδημία" (αγγλικά: infodemic) στις 2 Φεβρουαρίου.
@@ -154,14 +140,26 @@
 		</div>
 	</div>	
 	<div class="row" id="footer">
-	<div class="col-md-12">
-		<div class="footer-copyright text-center py-3">© 2020 Copyright:
-			<a href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
+		<div class="col-md-12">
+			<div class="footer-copyright text-center py-3">© 2020 Copyright:
+				<a id="url"  href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
+			</div>
+			<script src="donation.js"></script>
+			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		</div>
-		<script src="donation.js"></script>
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	</div>
-</body>
-</html>
+	</body>
+	</html>
+
+
+
+
+
+
+
+
+
+
+	
+		
