--- a/contact_us.html
+++ b/contact_us.html
@@ -79,9 +79,14 @@
 	</div>
 	<div class="row alignCenter">
 		<div class="col-md-6">
-			<img src="googleMaps.PNG" width="300" height="230"/>
+			<img class="show-on-mobile" src="googleMaps.PNG" width="300" height="230"/>
+			<img class="hide-on-mobile hide-on-desktop" id="mapTablet" src="googleMaps.PNG" width="370" height="300"/>
+			<br>
+			<img class="show-on-desktop" id="cont" src="googleMaps.PNG" width="600" height="430"/>
+			<br><br>
 		</div>
-		<div class="col-md-4">	
+		<div class="col-md-4">
+			<br><br><br><br>
 			<h3>Email form:</h3>
 			<form>
 				<div class="form-group">
