--- a/events.html
+++ b/events.html
@@ -74,8 +74,9 @@
     <div class="row alignCenter show-on-desktop hide-on-mobile" id="events">
         <div class="offset-2">
 		</div>
-        <div class="col-md-8 alignCenter show-on-desktop">
-            <img src="stayHome.jpg" width="400px" height="300px"/>
+        <div class="col-md-8 alignCenter">
+            <img class="show-on-tablet hide-on-mobile hide-on-desktop" src="stayHome.jpg" width="200px" height="100px"/>
+            <img class="show-on-desktop" src="stayHome.jpg" width="400px" height="300px"/>
         </div>
         <div class="offset-2">
         </div>
@@ -98,7 +99,7 @@
             <div class="container alignCente">
                 <div class="alignCenter">
                     <div class="span12">
-                        <table class="table-condensed table-bordered table-striped">
+                        <table class="table-condensed table-bordered table-striped margin0">
                             <thead>
                                 <tr>
                                 <th colspan="7">
