--- a/donation_pageGr.html
+++ b/donation_pageGr.html
@@ -3,87 +3,80 @@
 <head>
 	<title>Fight Coronavirus (COVID-19)</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="donation.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-		<ul class="navbar mr-auto">
+	<nav class="navbar navbar-expand-lg sticky-top">
+		<ul class="navbar mr-auto margin-bottom-0">
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0" id="covid">COVID-19</h4>
+			<button class="navbar-toggler navbar-dark alignCenter align-items-center" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarMenu">
-				<ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarMenu">
+				<ul class="navbar-nav">
 					<div class="nav-item">
-						<a href="IndexGr.html" class="nav-link">Αρχική</a>
+						<a href="IndexGr.html" class="nav-link"><b>ΑΡΧΙΚΗ</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="eventsGr.html" class="nav-link">Εκδηλώσεις</a>
+						<a href="eventsGr.html" class="nav-link"><b>ΕΚΔΗΛΩΣΕΙΣ</b></a>
 					</div>
 					<div class="nav-item">
-					<a href="donation_pageGr.html" class="nav-link">Δωρεά</a>
+					<a href="donation_pageGr.html" class="nav-link"><b>ΔΩΡΕΕΣ</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="about_usGr.html" class="nav-link">Σχετικά με εμάς</a>
+						<a href="about_usGr.html" class="nav-link"><b>ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</b></a>
 					</div>
-						<a href="contact_usGr.html" class="nav-link">Επικοινωνία</a>
+						<a href="contact_usGr.html" class="nav-link"><b>ΕΠΙΚΟΙΝΩΝΙΑ</b></a>
 					</div>
 				</ul>
 			</div>
 		</ul>
-		<div id="buttonsLanguage" class="row">
-			<ul class="navbar mr-auto">
+		<div id="buttonsLanguage" class="row show-on-desktop">
+			<ul class="navbar mr-auto margin-bottom-0">
 				<div class="col-md-1">
-					<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
+					<a class="socialButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-1">
-					<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
+					<a class="socialButton" id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-1">
-					<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
+					<a class="socialButton" id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
 				</div>
-        <div class="col-md-3">
+				<div class="col-md-3">
 					<select class="selectpicker" data-width="fit" onchange="location = this.value;">
 						<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="donation_pageGr.html">Ελληνικά</option>
 						<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="donation_page.html">English</option>
 					</select>
-        </div>
-        <div class="offset-1">
+				</div>
+				<div class="offset-1">
 				</div>
 			</div>
 		</ul>
-  </nav>
-  <div class="row">
-    <div class="offset-1">
-		</div>
-    <div class="col-md-10">
-      <div id="alignCenter">
+	</nav>
+  <div class="row alignCenter" id="donationheader">
+    <div class="col-md-12">
+      <div class="alignCenter">
         <br>
-        <h1 id="alignCenter">Κάντε μια δωρεά</h1>
+        <h1 class="alignCenter">Εδώ μπορείτε να κάνετε την δωρεά σας</h1>
         <br>
       </div>
     </div>
-    <div class="offset-1">
-    </div>
   </div>
-  <div class="row">
+  <div class="row alignCenter">
     <div class="offset-1">
     </div>
-    <div class="col-md-10">
-      <div id="alignCenter">
-        <img src="donationWallpaper.jpg" width="700" height="500"/>
+    <div class="col-md-10 show-on-desktop">
+      <div class="alignCenter">
+        <img src="donationWallpaper.jpg" alt="420" width="400px" height="270px"/>
       </div>
     </div>
     <div class="offset-1">
@@ -91,24 +84,24 @@
   </div>
   <br>
   <div class="row">
-    <div class="offset-1">
+    <div class="offset-4">
     </div>
-    <div class="col-md-10">
-      <div id="alignCenter">
+    <div class="col-md-4" id="donationheader">
+      <div class="alignCenter">
         <form class="needs-validation" novalidate>
           <div class="form-row">
             <div class="col-md-4 mb-3">
               <label for="validationCustom01">Όνομα</label>
-              <input type="text" class="form-control" id="validationCustom01" value="Πέτρος" required>
+              <input type="text" class="form-control" id="validationCustom01" value="Νίκος" required>
               <div class="valid-feedback">
-                Έγκυρο!
+                Looks good!
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <label for="validationCustom02">Επίθετο</label>
-              <input type="text" class="form-control" id="validationCustom02" value="Στέργιογλου" required>
+              <input type="text" class="form-control" id="validationCustom02" value="Ελευθερίου" required>
               <div class="valid-feedback">
-                Έγκυρο!
+                Looks good!
               </div>
             </div>
             <div class="col-md-4 mb-3">
@@ -119,14 +112,14 @@
                 </div>
                 <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
                 <div class="invalid-feedback">
-                  Παρακαλώ δώστε ένα ψευδόνυμο.
+                  Please choose a username.
                 </div>
               </div>
             </div>
           </div>
           <div class="form-row">
             <div class="col-md-6 mb-3">
-              <label for="validationCustom03">IΒΑΝ</label>
+              <label for="validationCustom03">IBAN</label>
               <input type="text" class="form-control" id="validationCustom03" required>
               <div class="invalid-feedback">
                 Please provide a valid city.
@@ -136,13 +129,14 @@
               <label for="validationCustom04">Περιοχή</label>
               <input type="text" class="form-control" id="validationCustom05" required>
               <div class="invalid-feedback">
+                Please select a valid state.
               </div>
             </div>
             <div class="col-md-3 mb-3">
               <label for="validationCustom05">Τ.Κ.</label>
               <input type="text" class="form-control" id="validationCustom05" required>
               <div class="invalid-feedback">
-                Παρακαλώ γράψτε έναν έγκυρο ταχυδρομικό κώδικα.
+                Please provide a valid zip.
               </div>
             </div>
           </div>
@@ -150,63 +144,59 @@
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
               <label class="form-check-label" for="invalidCheck">
-                Σωμφωνώ με τους όρους
+                Συμφωνώ με τους όρους
               </label>
               <div class="invalid-feedback">
                 You must agree before submitting.
               </div>
             </div>
-        </div>
-        <br>
-        <button class="btn btn-primary" type="submit">Υποβολή
+          </div>
+          <br>
+          <button class="btn btn-primary" type="submit">Υποβολή
         </form>
-          <script>
-          // Example starter JavaScript for disabling form submissions if there are invalid fields
-          (function() {
-            'use strict';
-            window.addEventListener('load', function() {
-              // Fetch all the forms we want to apply custom Bootstrap validation styles to
-              var forms = document.getElementsByClassName('needs-validation');
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function(form) {
+            <script>
+              (function() { 'use strict';
+                 window.addEventListener('load', function() {
+                 var forms = document.getElementsByClassName('needs-validation');
+                 var validation = Array.prototype.filter.call(forms, function(form) {
                 form.addEventListener('submit', function(event) {
                   if (form.checkValidity() === false) {
                     event.preventDefault();
                     event.stopPropagation();
                   }
                   form.classList.add('was-validated');
+                  }, false);
+                  });
                 }, false);
-              });
-            }, false);
-          })();
-          </script>
-    </div>
-    <div class="row align-items-center">
-      <div class="offset-4">
-      </div> 
-      <div class="col-md-4">
-        <br>
-        <p id="alignCenter"><b>Εναλλακτικά</b></p>
-        <br>
-        <div id="alignCenter">
-          <a href="https://www.paypal.com/us/home"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_200x51.png"/></a>
-        </div>
-        <br>
-        <br>
-      </div>
-      <div class="offset-4">
+              })();
+            </script>
       </div>
     </div>
-    <div class="row" id="footer">
-      <div class="col-md-12">
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-          <a href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
-        </div>
-        <script src="donation.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <div class="offset-4">
     </div>
-
+  </div>
+      <div class="row align-items-center">
+        <div class="col-md-12">
+          <p class="alignCenter"><b>Εναλλακτικά</b></p>
+            <div class="alignCenter">
+            <a href="https://www.paypal.com/us/home"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_200x51.png"/></a>
+          <br>
+          <br>
+          <br>
+        </div>
+        </div>
+      </div>
+      <div class="row" id="footer">
+        <div class="col-md-12">
+          <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a id="url"  href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
+          </div>
+          <script src="donation.js"></script>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        </div>
 </body>
 </html>
+
+    
