--- a/IndexGr.html
+++ b/IndexGr.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="donation.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.6/css/flag-icon.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -13,11 +14,11 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg sticky-top">
-		<ul class="navbar mr-auto margin-bottom-0">
+		<ul class="navbar mr-auto margin-bottom-0 width-full" >
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0" id="covid">COVID-19</h4>
+			<h4 class="mobile-title hide-on-desktop margin-bottom-0 alignCenter" id="covid">COVID-19</h4>
 			<button class="navbar-toggler navbar-dark alignCenter align-items-center" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -62,93 +63,97 @@
 			</div>
 		</ul>
 	</nav>
-	<div class="row" id="header">
-		<div class="offset-2">
+	<div class="content-wrapper">
+		<div class="row" id="header">
+			<div class="offset-2">
+			</div>
+			<div class="col-md-8">
+				<h1 class="alignCenter">Τι είναι ο Κορονοϊός;</h1>
+				<p>Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 18 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 200.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 8.000 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων από 4.700 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 82.000 άνθρωποι.
+					Η μόλυνση μεταδίδεται κυρίως μέσω της μετάδοσης από άνθρωπο σε άνθρωπο μέσω σταγονιδίων αναπνοής που παράγονται όταν εκπνέουν οι άνθρωποι (όπως φτάρνισμα ή βήχας) σε απόσταση μικρότερη του ενός μέτρου. Ο χρόνος μεταξύ της έκθεσης και της εμφάνισης συμπτωμάτων είναι συνήθως από 2 έως 14 ημέρες.
+				</p>
+				<br>
+				<br>
+			</div>
+			<div class="offset-2">
+			</div>
 		</div>
-		<div class="col-md-8">
-			<h1 class="alignCenter">Τι είναι ο Κορονοϊός;</h1>
-			<p>Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 18 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 200.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 8.000 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων από 4.700 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 82.000 άνθρωποι.
-				Η μόλυνση μεταδίδεται κυρίως μέσω της μετάδοσης από άνθρωπο σε άνθρωπο μέσω σταγονιδίων αναπνοής που παράγονται όταν εκπνέουν οι άνθρωποι (όπως φτάρνισμα ή βήχας) σε απόσταση μικρότερη του ενός μέτρου. Ο χρόνος μεταξύ της έκθεσης και της εμφάνισης συμπτωμάτων είναι συνήθως από 2 έως 14 ημέρες.
-			</p>
-			<br>
-			<br>
-		</div>
-		<div class="offset-2">
-		</div>
-	</div>
-	<div class="row align-items-center" id="carousel">
-		<div class="offset-2">
-		</div>
-		<div class="col-md-5 alignCenter">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+		<div class="row align-items-center" id="carousel">
+			<div class="offset-2">
+			</div>
+			<div class="col-md-5 alignCenter">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
+						</div>
 					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
-					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+					
 				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-				
+			</div>
+			<div class="col-md-4">
+				<div class="tips alignCenter">
+					<h3>Συμβουλές προστασίας</h3>
+					<h6>&bull; Πλένετε καλά τα χέρια σας.</h6>
+					<h6>&bull; Μην αγγίζετε το προσωπό σας συχνά.</h6>
+					<h6>&bull; Τηρείτε τις αποστάσεις ασφαλείας.</h6>
+					<h6>&bull; Μην επαναχρησιμοποιείτε μάσκες.</h6>
+				</div>
+			</div>
+			<div class="offset-1">
 			</div>
 		</div>
-		<div class="col-md-4">
-			<div class="tips alignCenter">
-				<h3>Συμβουλές προστασίας</h3>
-				<h6>Πλένετε καλά τα χέρια σας.</h6>
-				<h6>Μην αγγίζετε το προσωπό σας συχνά.</h6>
-				<h6>Τηρείτε τις αποστάσεις ασφαλείας.</h6>
-				<h6>Μην επαναχρησιμοποιείτε μάσκες.</h6>
+		<div class="row" id="mainIndex">
+			<div class="offset-3">
 			</div>
-		</div>
-		<div class="offset-1">
-		</div>
+			<div class="col-md-6">
+				<br>
+				<br>
+				<h3 class="alignCenter">Συμπτώματα</h3>
+				<p>Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. <br><br>Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία και πανεπιστήμια έχουν κλείσει σε εθνικό ή τοπικό επίπεδο σε τουλάχιστον 115 χώρες, επηρεάζοντας πάνω από 950 εκατομμύρια μαθητές.
+					Η πανδημία έχει κηρυχθεί από τον Παγκόσμιο Οργανισμό Υγείας (Π.Ο.Υ.) <br><br>Έκτακτη Ανάγκη Δημόσιας Υγείας Διεθνούς Ενδιαφέροντος (PHEIC), με βάση τις πιθανές επιπτώσεις που θα μπορούσε να έχει ο ιός εάν εξαπλωθεί σε χώρες με ασθενέστερα συστήματα υγειονομικής περίθαλψης. Αυτή η κήρυξη ήταν η έκτη φορά που έχει κληθεί το μέτρο μετά από την πανδημία του H1N1 το 2009.
+					Ξενοφοβία και ρατσισμός κατά των ανθρώπων κινεζικής και ανατολικής ασιατικής καταγωγής έχουν σημειωθεί λόγω της επιδημίας, τροφοδοτώντας τον φόβο και την εχθρότητα σε διάφορες χώρες. Παραπληροφόρηση που διαδόθηκε κυρίως στο διαδίκτυο σχετικά με τον κορωνοϊό, οδήγησε την ΠΟΥ να κηρύξει "πληροφοριοδημία" (αγγλικά: infodemic) στις 2 Φεβρουαρίου.
+				</p>
+			</div>
+			<div class="offset-3">
+			</div>
+		</div>	
 	</div>
-	<div class="row" id="mainIndex">
-		<div class="offset-3">
-		</div>
-		<div class="col-md-6">
-			<br>
-			<br>
-			<h3 class="alignCenter">Συμπτώματα</h3>
-			<p>Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία και πανεπιστήμια έχουν κλείσει σε εθνικό ή τοπικό επίπεδο σε τουλάχιστον 115 χώρες, επηρεάζοντας πάνω από 950 εκατομμύρια μαθητές.
-				Η πανδημία έχει κηρυχθεί από τον Παγκόσμιο Οργανισμό Υγείας (Π.Ο.Υ.) Έκτακτη Ανάγκη Δημόσιας Υγείας Διεθνούς Ενδιαφέροντος (PHEIC), με βάση τις πιθανές επιπτώσεις που θα μπορούσε να έχει ο ιός εάν εξαπλωθεί σε χώρες με ασθενέστερα συστήματα υγειονομικής περίθαλψης. Αυτή η κήρυξη ήταν η έκτη φορά που έχει κληθεί το μέτρο μετά από την πανδημία του H1N1 το 2009.
-				Ξενοφοβία και ρατσισμός κατά των ανθρώπων κινεζικής και ανατολικής ασιατικής καταγωγής έχουν σημειωθεί λόγω της επιδημίας, τροφοδοτώντας τον φόβο και την εχθρότητα σε διάφορες χώρες. Παραπληροφόρηση που διαδόθηκε κυρίως στο διαδίκτυο σχετικά με τον κορωνοϊό, οδήγησε την ΠΟΥ να κηρύξει "πληροφοριοδημία" (αγγλικά: infodemic) στις 2 Φεβρουαρίου.
-			</p>
-		</div>
-		<div class="offset-3">
-		</div>
-	</div>	
 	<div class="row" id="footer">
 		<div class="col-md-12">
 			<div class="footer-copyright text-center py-3">© 2020 Copyright:
-				<a id="url"  href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
+				<a class="url"  href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
+				<a class="hide-on-desktop url" href="Index.html"> - <span class="flag-icon flag-icon-us"></span> English</a>
 			</div>
 			<script src="donation.js"></script>
 			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		</div>
+	</div>
 	</body>
 	</html>
 
